--- a/public/scss/messages.scss
+++ b/public/scss/messages.scss
@@ -173,7 +173,7 @@
       background: transparent;
       i {
         pointer-events: none;
-        color: white;
+        color: rgb(29, 155, 240);
       }
     }
     .chat_attachments {
