--- a/views/pages/messages/chat.pug
+++ b/views/pages/messages/chat.pug
@@ -62,7 +62,7 @@ block bodyContent
                             span.material-symbols-outlined
                                 | gif_box
                     textarea#msgInput(placeholder='Start a new message...' rows="1")
-                    button 
+                    button.sendMassageBtn
                         i.fas.fa-paper-plane
         .right_side_container
     script.
